--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   </head>
   <body>
     <div id="main">
-      <button id="btn">click me</button>
       <div id="game">
         <div id="pin1" class="pin" class="pin">
-          <div id="test" class="ring large"></div>
-          <div class="ring medium"></div>
-          <div class="ring small"></div>
+          <!-- <div class="ring" id="ring1" data-value="1"></div>
+          <div class="ring" id="ring2"></div>
+          <div class="ring" id="ring3"></div> -->
         </div>
         <div class="pin" id="pin2"></div>
         <div class="pin" id="pin3"></div>
