--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div id="main">
+      <button id="solve-btn">Solve</button>
+      <div>Moves used: <span id="moves-display"> </span></div>
       <div id="game">
-        <div id="pin1" class="pin" class="pin">
+        <div class="pin" id="pin1" >
           <!-- <div class="ring" id="ring1" data-value="1"></div>
           <div class="ring" id="ring2"></div>
           <div class="ring" id="ring3"></div> -->
@@ -19,5 +21,5 @@
       </div>
     </div>
   </body>
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
 </html>
