Couldn't do partial completions, otherwise done. Could also do animations tihi

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="main">
       <button id="solve-btn">Solve</button>
+      <button id="reset-btn">Reset</button>
       <div>Moves used: <span id="moves-display"> </span></div>
       <div id="game">
         <div class="pin" id="pin1" >
